--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
   
 	<dependencies>
 		<dependency>
+		  <groupId>com.state</groupId>
+		  <artifactId>dm</artifactId>
+		  <version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
