初始化项目

--- a/src/main/resources/data-source.properties
+++ b/src/main/resources/data-source.properties
@@ -1,10 +1,10 @@
 #data source config
-com.state.driverClass = com.mysql.jdbc.Driver
+com.state.driverClass = dm.jdbc.driver.DmDriver
 
-com.state.druid.url=jdbc\:mysql\://10.202.80.86\:3306/vps?characterEncoding\=UTF-8
+com.state.druid.url=jdbc\:dm\://172.17.20.126\:12345/CBPM
  
-com.state.druid.username=vps
-com.state.druid.password=qazwsx
+com.state.druid.username=CBPM
+com.state.druid.password=CBPM_CBPM
 com.state.druid.initialSize=10
 com.state.druid.minIdle=10
 com.state.druid.maxActive=200
@@ -16,5 +16,5 @@ com.state.druid.testWhileIdle=true
 com.state.druid.testOnBorrow=false
 com.state.druid.testOnReturn=false
 com.state.druid.poolPreparedStatements=true
-com.state.druid.maxPoolPreparedStatementPerConnectionSize=1000
+com.state.druid.maxOpenPreparedStatements=1000
 com.state.druid.filters=wall,stat
